fix(anchor-navigation): remove spacing after link (#858)

--- a/components/AnchorNavigation/src/index.scss
+++ b/components/AnchorNavigation/src/index.scss
@@ -29,8 +29,8 @@
   line-height: var(--denhaag-anchor-navigation-link-line-height);
   padding-block-end: var(--denhaag-anchor-navigation-link-padding-block);
   padding-block-start: var(--denhaag-anchor-navigation-link-padding-block);
-  padding-inline-end: var(--denhaag-anchor-navigation-link-padding-inline);
-  padding-inline-start: var(--denhaag-anchor-navigation-link-padding-inline);
+  padding-inline-end: var(--denhaag-anchor-navigation-link-padding-inline-end);
+  padding-inline-start: var(--denhaag-anchor-navigation-link-padding-inline-start);
   outline: none;
   position: relative;
   text-decoration: var(--denhaag-anchor-navigation-link-text-decoration);
